# aws-sdk-cpp

./: .gitignore  build.sh
example/: CMakeLists.txt  build.sh  example.cpp  example.h
src/aws-cpp-sdk-core/source/http/crt/: CRTHttpClient.cpp
